fixed whitespace

--- a/style.scss
+++ b/style.scss
@@ -272,18 +272,17 @@ nav {
 }
 
 #menu-items {
-	margin-top: 20px;
+	margin-top: 40px;
     display: none;
     position: absolute;
-    background-color: $white;
+    background-color: #212121;
     right: 0;
-    color: #167C80;
-    border-radius: 3px;
+    border-radius: 2px;
     padding: 10px;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
 
     a {
-        color: black;
+        color: $customGray;
         display: block;
     }
 }
